feat(player_api): most_played champs + update openapi
