# player-api/player_api/models/responses.py
@@ -1,0 +1,5 @@
+from pydantic import BaseModel
+
+
+class ExceptionMessage(BaseModel):
+    detail: str
